// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> tests should render a primary button 1`] = `
<div>
  <button
    class="button button-primary"
    type="button"
  />
</div>
`;

exports[`<Button /> tests should render a secondary button 1`] = `
<div>
  <button
    class="button button-secondary"
    type="button"
  />
</div>
`;

exports[`<Button /> tests should render as default button 1`] = `
<button
  class="button button-primary"
  type="button"
/>
`;

exports[`<Button /> tests should render the button with some text 1`] = `
<div>
  <button
    class="button button-primary"
    type="button"
  >
    I am a button, I can be clicked
  </button>
</div>
`;
